force-app/main/default/objects/Quote/fields/Additional_Consumer_Audeince_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Consumer_Audeince_Details__c</fullName>
    <label>Additional Segment Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>