force-app/main/default/objects/Quote/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <formula>TEXT(Opportunity.Audience_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audience Type</label>
    <type>Text</type>
</CustomField>