force-app/main/default/objects/Quote/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <formula>Opportunity.Account.Name + &apos;-&apos; + Opportunity.SubClient_or_Manufacturer__r.Name + &apos;-&apos; + Opportunity.Name + &apos;-&apos; + TEXT( Opportunity.Audience_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>