force-app/main/default/objects/Quote/fields/Creative_Service_Needed__c.field-meta.xml
<CustomField>
    <fullName>Creative_Service_Needed__c</fullName>
    <label>Creative Services Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Providing</fullName>
            </value>
            <value>
                <fullName>Adfire Creating</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>