force-app/main/default/objects/Quote/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <formula>TEXT(MONTH(  DATEVALUE(Flight_Start_Date__c) )) + &apos;/&apos; +  TEXT(YEAR( DATEVALUE(Flight_Start_Date__c) )) + &apos; - &apos; +  
 TEXT(MONTH( DATEVALUE(Flight_End_Date__c ) )) + &apos;/&apos; + TEXT(YEAR( DATEVALUE(Flight_End_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight</label>
    <type>Text</type>
</CustomField>