force-app/main/default/objects/Quote/fields/Flight_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_End_Date__c</fullName>
    <label>Flight End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>