force-app/main/default/objects/Quote/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conversions</fullName>
            </value>
            <value>
                <fullName>Email Open Rate (OR)</fullName>
            </value>
            <value>
                <fullName>Email Click Rate (CR)</fullName>
            </value>
            <value>
                <fullName>Email Click to Open Rate (CTOR)</fullName>
            </value>
            <value>
                <fullName>Landing Page Impressions</fullName>
            </value>
            <value>
                <fullName>Google Search CTR</fullName>
            </value>
            <value>
                <fullName>Google Search Impressions</fullName>
            </value>
            <value>
                <fullName>CPC per channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>