force-app/main/default/objects/Quote/fields/Invoice_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Creation_Date__c</fullName>
    <label>Invoice Creation Date</label>
    <type>Date</type>
</CustomField>