force-app/main/default/objects/Quote/fields/Regional_Target__c.field-meta.xml
<CustomField>
    <fullName>Regional_Target__c</fullName>
    <label>Regional Target</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AK</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>