force-app/main/default/objects/Quote/fields/Strategies_Products__c.field-meta.xml
<CustomField>
    <fullName>Strategies_Products__c</fullName>
    <label>Strategies/Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:1 Cross Device</fullName>
            </value>
            <value>
                <fullName>1:1 InApp</fullName>
            </value>
            <value>
                <fullName>1:1 Web</fullName>
            </value>
            <value>
                <fullName>1:1 Retargeting</fullName>
            </value>
            <value>
                <fullName>1:1 Site Retargeting</fullName>
            </value>
            <value>
                <fullName>1:1 High Impact</fullName>
            </value>
            <value>
                <fullName>1:1-POC</fullName>
            </value>
            <value>
                <fullName>1:1 Contextual</fullName>
            </value>
            <value>
                <fullName>1:1 Endemic Sites</fullName>
            </value>
            <value>
                <fullName>1:1 Premium</fullName>
            </value>
            <value>
                <fullName>1:1 Corp Health Endemic</fullName>
            </value>
            <value>
                <fullName>1:1 YouTube</fullName>
            </value>
            <value>
                <fullName>1:1 CTV</fullName>
            </value>
            <value>
                <fullName>1:1 Video</fullName>
            </value>
            <value>
                <fullName>1:1 Native</fullName>
            </value>
            <value>
                <fullName>1:1 LinkedIn</fullName>
            </value>
            <value>
                <fullName>1:1 Paid Search</fullName>
            </value>
            <value>
                <fullName>1:1 FB&amp;IG</fullName>
            </value>
            <value>
                <fullName>1:1 Twitter</fullName>
            </value>
            <value>
                <fullName>1:1 TikTok</fullName>
            </value>
            <value>
                <fullName>1:1 Audio</fullName>
            </value>
            <value>
                <fullName>1:1 Expandable Rising Star</fullName>
            </value>
            <value>
                <fullName>1:1 Email</fullName>
            </value>
            <value>
                <fullName>1:1 Geofencing</fullName>
            </value>
            <value>
                <fullName>Conference Package</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1:1 Facebook</fullName>
            </value>
            <value>
                <fullName>1:1 Instagram</fullName>
            </value>
            <value>
                <fullName>Target on Cross Device, In-App, + Retargeting</fullName>
            </value>
            <value>
                <fullName>Target with Site Retargeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>