force-app/main/default/objects/Quote/fields/Target_Geo_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Geo_Type__c</fullName>
    <label>Target Geo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Zip</fullName>
            </value>
            <value>
                <fullName>DMA</fullName>
            </value>
            <value>
                <fullName>Radius</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>