force-app/main/default/objects/Quote/recordTypes/Adfire_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Adfire_Marketing</fullName>
    <active>true</active>
    <label>Adfire Marketing</label>
</RecordType>