force-app/main/default/objects/Quote/recordTypes/Adfire_Recruit.recordType-meta.xml
<RecordType>
    <fullName>Adfire_Recruit</fullName>
    <active>true</active>
    <label>Adfire Recruit</label>
</RecordType>