force-app/main/default/objects/Quote/validationRules/AdditionDeatil.validationRule-meta.xml
<ValidationRule>
    <fullName>AdditionDeatil</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Audience_Type__c  =  &quot;Consumer&quot; &amp;&amp;  ISBLANK( Additional_Consumer_Audeince_Details__c ),true,false)</errorConditionFormula>
    <errorDisplayField>Additional_Consumer_Audeince_Details__c</errorDisplayField>
    <errorMessage>Please fill additional details.</errorMessage>
</ValidationRule>