force-app/main/default/objects/Quote/validationRules/Opportunity_fields_not_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_fields_not_filled</fullName>
    <active>true</active>
    <errorConditionFormula>/*OR( ISBLANK( Opportunity.Account.Name ) ,ISBLANK( Opportunity.SubClient_or_Manufacturer__r.Name  ),ISBLANK( Opportunity.Brand__r.Name ), ISBLANK( Audience_Type__c ))*/

OR( ISBLANK( Opportunity.Account.Name ) ,ISBLANK( Opportunity.SubClient_or_Manufacturer__r.Name  ), ISBLANK( Audience_Type__c ))</errorConditionFormula>
    <errorMessage>Please fill all the opportunity fields</errorMessage>
</ValidationRule>